# pente

./: .gitignore  CMakeLists.txt  README.md
ABalgo/: CMakeLists.txt  scr.sh
ABalgo/include/: algorithm.h  value.h
ABalgo/src/: algorithm.cpp  main.cpp
PenteFinal/: CUDA.txt  FILENAME.txt  PenteFinal.cbp  PenteFinal.depend  PenteFinal.layout
PenteFinal/include/: algorithm.h  pente.h  player.h  timer.h
PenteFinal/source/: main.cpp  player.cpp
include/: additional_functions.h  algorithm.h  pente.h  player.h  value.h
include/cuda/: parallel_minmax.h
pente/: CMakeLists.txt
pente+alfa_beta/: scr.sh
pente+alfa_beta/include/: algorithm.h  pente.h  player.h
pente+alfa_beta/pente+alfa_beta/include/: algorithm.h
pente+alfa_beta/pente+alfa_beta/src/: algorithm.cpp  cmake_install.cmake  main.cpp  value.cpp
pente+alfa_beta/src/: CMakeCache.txt  algorithm.cpp  player.cpp  value.cpp
pente+alfa_beta_vector/: CMakeLists.txt
pente+alfa_beta_vector/include/: algorithm.h  value.h
pente+alfa_beta_vector/src/: algorithm.cpp  main.cpp  pente.cpp  value.cpp
pente/src/: Makefile  main.cpp  pente
source/: additional_funcions.cpp  algorithm.cpp  main.cpp  main_two.cpp  pente.cpp  player.cpp  timer.cpp  value.cpp
source/cuda/: parallel_minmax.cu
